--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,7 +18,6 @@
             <div class="row">
                 <div class="col-xs-3 col-sm-6 col-md-6 col-lg-6">
                     <img class="img-responsive logo" alt="Udacity logo" src="../img/udacity.svg" />
-
                 </div>
                 <div class="col-xs-9 col-sm-6 col-md-6 col-lg-6">
                     <h1 class="text-right text-uppercase"> Jane Doette </h1>
@@ -26,8 +25,8 @@
                 </div>
             </div>
         </div>
-
     </header>
+
     <section class="divider">
         <div class="container">
             <div class="row">
@@ -41,7 +40,7 @@
     <section class="hero-picture">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <img class="img-responsive content-img" alt="Cat Picture" src="http://lorempixel.com/1080/500/cats/4" />
                 </div>
             </div>
@@ -51,7 +50,7 @@
     <section class="content-title">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h2>Featured Work </h2>
                 </div>
             </div>
